--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="donation_ids" translatable="false">
-        <item>code_name_monkey_donate_1</item>
-        <item>code_name_monkey_donate_2</item>
-        <item>code_name_monkey_donate_3</item>
-        <item>code_name_monkey_donate_4</item>
-        <item>code_name_monkey_donate_5</item>
-        <item>code_name_monkey_donate_6</item>
-        <item>code_name_monkey_donate_7</item>
-        <item>code_name_monkey_donate_8</item>
+        <item>app_musiko_donate_1</item>
+        <item>app_musiko_donate_2</item>
+        <item>app_musiko_donate_3</item>
+        <item>app_musiko_donate_4</item>
+        <item>app_musiko_donate_5</item>
+        <item>app_musiko_donate_6</item>
+        <item>app_musiko_donate_7</item>
+        <item>app_musiko_donate_8</item>
     </string-array>
 
     <string name="app_name" translatable="false">Musiko</string>
