--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider"
-        app:permissionButtonTitle="Grant access"
+        app:permissionButtonTitle="Garantir acesso"
         app:permissionIcon="@drawable/ic_sd_storage"
         app:permissionTitle="@string/permission_title"
         app:permissionTitleNumber="1"
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/storagePermission"
-        app:permissionButtonTitle="Grant access"
+        app:permissionButtonTitle="Garantir acesso"
         app:permissionIcon="@drawable/ic_phonelink_ring"
         app:permissionTitle="@string/ringtone_title"
         app:permissionTitleNumber="2"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:paddingVertical="12dp"
-        android:text="Let's go"
+        android:text="Vamos lá"
         android:textAppearance="@style/TextViewButton"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
