--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -3,6 +3,11 @@
     <string-array name="donation_ids" translatable="false">
         <item>app_musiko_donate_1</item>
         <item>app_musiko_donate_2</item>
+        <item>app_musiko_donate_3</item>
+        <item>app_musiko_donate_4</item>
+        <item>app_musiko_donate_5</item>
+        <item>app_musiko_donate_6</item>
+        <item>app_musiko_donate_7</item>
 
     </string-array>
 
