--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="card_shadow_2">#dddddd</color>
 
     <color name="progress_gray">#FFD8D8D8</color>
-    <color name="default_blue_light">#ff33b5e5</color>
+    <color name="default_blue_light">#00BFA5</color>
 
 
 </resources>
